2000-02-08  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlprinter.c (draw_panel): Implemented.  It does actually just
	draws a rectangle for now.
	(class_init): Install it.

	* htmlengine-print.c (html_engine_print): When you call
	`html_engine_calc_size()', it uses `html_object_calc_min_size()'
	to decide the layout width, but the minimum HTMLTable width does
	not really change before you call `html_object_calc_size()' on it.
	So, we have to add an extra call to `html_engine_calc_size()'
	here, to make sure the minimum width is correct when we go back
	from the GnomePrint painter to the GDK one.

	* htmlengine.c (parse_h): Optimize and make more readable the
	H[1-6] checks.

2000-02-07  Ettore Perazzoli  <ettore@helixcode.com>

	* htmltable.c (calc_preferred_width): Do not calc_size.
	(calc_min_width): Likewise.

2000-02-04  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlimage.c (calc_min_width): Fixed brainos.

	* htmltablecell.c (html_table_cell_new): Removed parameters `x'
	and `y'.  Renamed `max_width' to `specified_width'
	(html_table_cell_init): Likewise.

	* htmlimage.c (get_actual_width): New param `painter'.  The
	returned value is now expressed in painter units, instead of image
	pixel units.
	(get_actual_height): Likewise.
	(calc_preferred_width): Updated accordingly.
	(calc_min_width): Updated accordingly.
	(calc_size): Updated accordingly.
	(draw): Updated accordingly.

	* htmlimage.c (draw): Draw an highlighted pixmap when selected.

	* htmlgdkpainter.c (draw_pixmap): Fixed to handle the composition
	color more nicely.

2000-02-03  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlprinter.c (draw_text): Use `gnome_font_get_underline_position()'
	and `gnome_font_get_underline_thickness()' to get the
	strikeout/underline line right.

	* htmlprintfontmanager.c (load_font): Changed default font size
	from 12 pt. to 10 pt.

	* htmlprinter.c (begin): Do a gsave and setup a clip region.
	Also, paint a rectangle around the clip region to make debugging